<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.example.dell.civicaid.Feedback">

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:padding="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
<TextView
    android:text="@string/name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/textView1"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="10dp"
    android:textSize="24sp"
    android:layout_marginTop="50dp"/>

<EditText
    android:id="@+id/editText1"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/textView1"
    android:layout_margin="15dp"
    android:inputType="textCapCharacters"
    />
<TextView
    android:text="@string/message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:id="@+id/textView2"
    android:layout_below="@+id/editText1"
    android:layout_margin="20dp"
    android:layout_marginStart="10dp"
    />

<EditText
    android:id="@+id/editText2"
    android:layout_width="340dp"
    android:layout_height="100dp"
    android:layout_below="@+id/textView2"
    android:layout_margin="15dp"
    android:inputType="textMultiLine"
    />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/send"
    android:id="@+id/button"
    android:layout_below="@+id/editText2"
    android:layout_margin="40dp"
    android:gravity="center"
    android:layout_centerHorizontal="true"
    />

</RelativeLayout>

</ScrollView>


