<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.example.dell.civicaid.signup">


<EditText
    android:id="@+id/uname"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/uname"
    android:inputType="text|textCapCharacters|textCapWords"
    android:textColorHint="@color/colorWhite"
    android:textStyle="bold"
    android:textColor="@color/colorWhite"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.051"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<EditText
    android:id="@+id/email"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/enterEmail"
    android:textColorHint="@color/colorWhite"
    android:textStyle="bold"
    android:textColor="@color/colorWhite"
    android:inputType="textEmailAddress"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.385"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/uname"
    app:layout_constraintVertical_bias="0.032"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<EditText
    android:id="@+id/TFcontact"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/ContactNumber"
    android:textColorHint="@color/colorWhite"
    android:textStyle="bold"
    android:textColor="@color/colorWhite"
    android:inputType="phone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/email"
    app:layout_constraintVertical_bias="0.05"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<EditText
    android:id="@+id/pass1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/pass"
    android:textColorHint="@color/colorWhite"
    android:textStyle="bold"
    android:textColor="@color/colorWhite"
    android:inputType="textPassword"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/TFcontact"
    app:layout_constraintVertical_bias="0.058"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<EditText
    android:id="@+id/pass2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/ConfirmPass"
    android:textColorHint="@color/colorWhite"
    android:textStyle="bold"
    android:textColor="@color/colorWhite"
    android:inputType="textPassword"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/pass1"
    app:layout_constraintVertical_bias="0.098"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/signup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="162dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="next"
        android:text="@string/CreateAccount"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass2"
        app:layout_constraintVertical_bias="0.263"
        tools:layout_editor_absoluteY="393dp" />


</android.support.constraint.ConstraintLayout>
