<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb_520x420"
    tools:context="com.example.dell.civicaid.Main2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
       >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:onClick="cmg"
        app:srcCompat="@drawable/mygroup_120x120"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:layout_marginStart="45dp"/>

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@null"
        android:onClick="ts"
        app:srcCompat="@drawable/travel_100x100"
        android:layout_marginTop="115dp"
        android:layout_marginStart="255dp"
       />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@null"
        android:onClick="np"
        app:srcCompat="@drawable/locates_100x100"
        android:layout_below="@+id/imageButton5"
        android:layout_marginStart="255dp"
        android:layout_marginTop="100dp"/>

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@null"
        android:onClick="sos"
        app:srcCompat="@drawable/sos"
        android:layout_below="@+id/imageButton6"
        android:layout_marginStart="45dp"
        android:layout_marginTop="95dp"/>

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:onClick="rai"
        app:srcCompat="@drawable/incident_100x100"
        android:layout_below="@+id/imageButton11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reportincident"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@+id/imageButton13"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearby"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@+id/imageButton9"
        android:layout_marginStart="252dp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelsafe"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@+id/imageButton6"
        android:layout_marginStart="260dp"
        android:layout_marginTop="8dp"
       />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creategroup"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@+id/imageButton5"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpme"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@+id/imageButton11"
        android:layout_marginStart="55dp"
        android:layout_marginTop="8dp"
      />

</RelativeLayout>
</ScrollView>
