<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.civicaid.travelsafe">


<TextView
    android:id="@+id/textView5"
    android:layout_width="342dp"
    android:layout_height="53dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/label"
    android:textAllCaps="true"
    android:textAppearance="@style/TextAppearance.AppCompat"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="20sp"
    android:textStyle="italic"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.307"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.096"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<EditText
    android:id="@+id/editText6"
    android:layout_width="235dp"
    android:layout_height="51dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/boarding"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp"
    android:textStyle="bold"
    android:inputType="text|textCapCharacters|textCapWords"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.06"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.312"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<EditText
    android:id="@+id/editText7"
    android:layout_width="235dp"
    android:layout_height="49dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/destination"
    android:textColor="@color/colorPrimary"
    android:textStyle="bold"
    android:textSize="20sp"
    android:inputType="text|textCapCharacters|textCapWords"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.059"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editText6"
    app:layout_constraintVertical_bias="0.052"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<EditText
    android:id="@+id/editText8"
    android:layout_width="338dp"
    android:layout_height="53dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/VehicalNo"
    android:textColor="@color/colorPrimary"
    android:textStyle="bold"
    android:textSize="20sp"
    android:inputType="text|textCapCharacters|textCapWords"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.14"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editText7"
    app:layout_constraintVertical_bias="0.085"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="170dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="button"
        android:text="@string/inform"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8"
        app:layout_constraintVertical_bias="0.873" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364"
        app:srcCompat="@drawable/jas"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <EditText
        android:id="@+id/INumber"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Contact1"
        android:gravity="center"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/INumber2"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Contact2"
        android:gravity="center"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
